--- a/admin/src/main/resources/static/storeUserFood/storeUserFoodList.html
+++ b/admin/src/main/resources/static/storeUserFood/storeUserFoodList.html
@@ -282,7 +282,7 @@
                     <th class="text-right">门店报价</th>
                     <th class="text-center">审核</th>
                     <th class="text-center">发布</th>
-                    <th class="text-center">库位</th>
+                    <!--<th class="text-center">库位</th>-->
                     <th class="text-right form-inline">
                         操作
                     </th>
@@ -571,11 +571,11 @@
                             </table>
                         </div>
                     </td>
-                    <td class="text-center" s="tpl">
-                        <div name="warehouseName" class="f-xs text-muted">{%=this.warehouseName%}</div>
-                        <a href="javascript:;" s-click="bindWarehouse(this)">绑定库位</a>
-                        <a href="javascript:;" s-click="delWarehouse(this)">解绑库位</a>
-                    </td>
+                    <!--<td class="text-center" s="tpl">-->
+                        <!--<div name="warehouseName" class="f-xs text-muted">{%=this.warehouseName%}</div>-->
+                        <!--<a href="javascript:;" s-click="bindWarehouse(this)">绑定库位</a>-->
+                        <!--<a href="javascript:;" s-click="delWarehouse(this)">解绑库位</a>-->
+                    <!--</td>-->
                     <!--<td name="warehouseName" class="text-center"></td>-->
                     <td class="text-right" s="tpl">
                         {%if(this.quoteStatus == 'WAIT_VERIFY') {%}
