--- a/admin/src/main/resources/static/food/food-save.html
+++ b/admin/src/main/resources/static/food/food-save.html
@@ -81,10 +81,9 @@
                 <td>美团类目</td>
                 <td>
                     <input type="hidden" class="form-control dropdown-toggle" placeholder="美团类目" id="meituanTagId"
-                           s-valid-error="require()"
                            name="meituanTagId" data-toggle="dropdown"/>
                     <input type="text" readonly s-click="selectMeituanTag()" class="form-control dropdown-toggle"
-                           placeholder="美团类目" id="meituanTagName" s-valid-error="require()"
+                           placeholder="美团类目" id="meituanTagName"
                            name="meituanTagName" data-toggle="dropdown"/>
                 </td>
             </tr>
@@ -166,7 +165,7 @@
     }
 
     function selectIcon() {
-      S.popupOpen("/oss/objects-selector.html", {prefix: 'adv'}).done(function(datas) {
+      S.popupOpen("/oss/objects-selector.html", {prefix: 'qzc'}).done(function(datas) {
         if(datas) {
           var icon = datas[0];
           $icon.data({
@@ -177,7 +176,7 @@
     }
 
     function selectVideo() {
-        S.popupOpen("/oss/objects-selector.html", {prefix: 'adv'}).done(function(datas) {
+        S.popupOpen("/oss/objects-selector.html", {prefix: 'qzc'}).done(function(datas) {
             if(datas) {
                 var icon = datas[0];
                 var target = 'mp4';
