--- a/admin/src/main/resources/static/storeUserFood/storeUserFoodAdd.html
+++ b/admin/src/main/resources/static/storeUserFood/storeUserFoodAdd.html
@@ -1,194 +1,217 @@
 <meta title="新增门店商品" width="1000"/>
 <div class="p">
-	<form id="form" s="valid,nda">
-		<div class="p-b clearfix">
-			<div class="pull-left">
-				<div s-valid-role="item" id="storeUser" s="tpl" s-data="{}" s-valid-label="门店"
-					 s-click="selectStoreUser()" style="display: inline-block">
-					<a href="javascript:;" class="h3">{%=this.name || '选择门店'%} <i class="fa fa-plus"></i></a>
-					<input type="hidden" name="storeUserId" value="{%=this.id%}" s-valid-error="require()"/>
-				</div>
-			</div>
-			<div class="pull-right">
-				<input type="button" class="btn btn-success btn-xs" s-click="selectFood()" value="选择商品"/>
-				<input type="button" class="btn btn-primary btn-xs" s-click="selectStoreFood()" value="添加门店商品"/>
-			</div>
-		</div>
-		<div class="" id="foodQuoteSheetsGrid" s='check,datac,nda'
-			 style="max-height: 500px; overflow: auto">
-			<table
-					class="table table-striped table-bordered form-inline table-hover">
-				<tr>
-					<th>图片</th>
-					<th>商品名</th>
-					<th class="text-right">报价</th>
-					<th class="text-right">售价</th>
-					<th class="text-right">操作</th>
-				</tr>
-				<tbody s="loop" id="foodList">
-				<tr s-loop-role="empty">
-					<td colspan="5" class="alert alert-warning">
-						暂无商品
-					</td>
-				</tr>
-				<tr s-loop-role="row" class="food-quote-row" s="datac">
-					<td s="tpl">
-						<img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
-						<input type="hidden" class="food-id" value="{%=this.foodId%}"/>
-						<input type="hidden" class="sale" value="{%=this.sale%}"/>
-					</td>
-					<td>
-						<input type="text" class="form-control food-name" name="foodName"/>
-					</td>
-					<td class="text-right" s="tpl">
-						<div class="input-group">
-							<input type="number" class="form-control quotePrice"
-								   name="quotePrice"
-								   data-food-unit="{%=this.foodUnit%}"
-								   step="0.1"
-								   data-per-increase="{%=this.foodPerIncrease%}"
-								   style="width: 60px;" s-valid-error="require(),number()"
-								   value="{%=this.quotePrice.toFixed(1)%}"/>
-							<span class="input-group-addon">元/{%=this.foodUnit%}</span>
-						</div>
-					</td>
-					<td class="text-right" s="tpl">
-						<div class="input-group">
-							<input type="number" class="form-control salePrice" name="salePrice"
-								   style="width: 60px;" s-valid-error="require(),number()"
-								   step="0.1"
-								   value="{%=this.salePrice.toFixed(1)%}"/>
-							<span class="input-group-addon">元/{%=this.foodUnit%}</span>
-						</div>
-					</td>
-					<td class="text-right">
-						<a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>
-					</td>
-				</tr>
-				</tbody>
-			</table>
-		</div>
-	</form>
+    <form id="form" s="valid,nda">
+        <div class="p-b clearfix">
+            <div class="pull-left">
+                <div s-valid-role="item" id="storeUser" s="tpl" s-data="{}" s-valid-label="门店"
+                     s-click="selectStoreUser()" style="display: inline-block">
+                    <a href="javascript:;" class="h3">{%=this.name || '选择门店'%} <i class="fa fa-plus"></i></a>
+                    <input type="hidden" name="storeUserId" value="{%=this.id%}" s-valid-error="require()"/>
+                </div>
+            </div>
+            <div class="pull-right">
+                <input type="button" class="btn btn-success btn-xs" s-click="selectFood()" value="选择商品"/>
+                <!--<input type="button" class="btn btn-primary btn-xs" s-click="selectStoreFood()" value="添加门店商品"/>-->
+            </div>
+        </div>
+        <div class="" id="foodQuoteSheetsGrid" s='check,datac,nda'
+             style="max-height: 500px; overflow: auto">
+            <table
+                    class="table table-striped table-bordered form-inline table-hover">
+                <tr>
+                    <th>图片</th>
+                    <th>商品名</th>
+                    <th class="text-right">进价</th>
+                    <th class="text-right">零售价</th>
+                    <th class="text-right">最小起购数量</th>
+                    <th class="text-right">库存</th>
+                    <th class="text-right">操作</th>
+                </tr>
+                <tbody s="loop" id="foodList">
+                <tr s-loop-role="empty">
+                    <td colspan="5" class="alert alert-warning">
+                        暂无商品
+                    </td>
+                </tr>
+                <tr s-loop-role="row" class="food-quote-row" s="datac">
+                    <td s="tpl">
+                        <img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
+                        <input type="hidden" class="food-id" value="{%=this.id%}"/>
+                        <!--<input type="hidden" class="sale" value="{%=this.sale%}"/>-->
+                    </td>
+                    <td>
+                        <input type="text" readonly class="form-control food-name" name="foodName"/>
+                    </td>
+                    <td class="text-right" s="tpl">
+                        <div class="input-group">
+                            <input type="number" class="form-control quotePrice"
+                                   name="inputPrice"
+                                   data-food-unit="{%=this.spec%}"
+                                   step="0.1"
+                                   data-per-increase="{%=this.foodPerIncrease%}"
+                                   style="width: 60px;" s-valid-error="require(),number()"
+                                   value="{%=this.inputPrice.toFixed(1)%}"/>
+                            <span class="input-group-addon">元/{%=this.spec%}</span>
+                        </div>
+                    </td>
+                    <td class="text-right" s="tpl">
+                        <div class="input-group">
+                            <input type="number" class="form-control salePrice" name="outputPrice"
+                                   style="width: 60px;" s-valid-error="require(),number()"
+                                   step="0.1"
+                                   value="{%=this.outputPrice.toFixed(1)%}"/>
+                            <span class="input-group-addon">元/{%=this.spec%}</span>
+                        </div>
+                    </td>
+                    <td class="text-right" s="tpl">
+                        <div class="input-group">
+                            <input type="number" class="form-control salePrice" name="minOrderCount"
+                                   style="width: 60px;" s-valid-error="require(),number()"
+                                   value="{%=this.minOrderCount%}"/>
+                            <!--<span class="input-group-addon">{%=this.minOrderCount%}</span>-->
+                        </div>
+                    </td>
+                    <td class="text-right" s="tpl">
+                        <div class="input-group">
+                            <input type="number" class="form-control salePrice" name="stock"
+                                   style="width: 60px;" s-valid-error="require(),number()"
+                                   value="{%=this.stock%}"/>
+                            <!--<span class="input-group-addon">{%=this.stock%}</span>-->
+                        </div>
+                    </td>
+                    <td class="text-right">
+                        <a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </form>
 </div>
 <script type="text/javascript">
 
-	var currentStoreUser = null;
-	var sale = false;
-	S.meta.btns = [
-		{
-			name: "确定",
-			style: "btn btn-primary",
-			click: function () {
-				var deferred = $.Deferred()
-				$form.validate().done(function () {
-					var list = []
-					S.node.find('.food-quote-row').each(function () {
-						var row = $(this)
-						var foodId = row.find('.food-id').val()
-						var quotePriceNode = row.find('.quotePrice');
-						var foodNameNode = row.find('.food-name');
-						var quotePrice = quotePriceNode.val()
-						var detail = {
-							foodId: foodId,
-							quotePrice: quotePrice,
-							sale: row.find('.sale').val(),
-							salePrice: row.find('.salePrice').val(),
-							foodName: foodNameNode.val()
-						}
-						list.push(detail)
-					})
-					if (list.length == 0) {
-						S.alert('请选择商品', 'warning')
-						deferred.reject()
-						return
-					}
-					var loadingDeferred = S.loading()
-					var param = Smart.serializeToObject($form.node);
-					param.foodList = list
-					param.storeUserIdList = [currentStoreUser.id]
-					S.post('/api/store-user-food', {json: JSON.stringify(param)}).done(function (rs) {
-						if (rs) {
-							S.toast('保存成功', 'success')
-							S.close(true)
-						} else {
-							deferred.reject()
-						}
-					}).fail(function () {
-						deferred.reject()
-					}).always(function () {
-						loadingDeferred.resolve()
-					})
+    var currentStoreUser = null;
+    var sale = false;
+    S.meta.btns = [
+        {
+            name: "确定",
+            style: "btn btn-primary",
+            click: function () {
+                var deferred = $.Deferred()
+                $form.validate().done(function () {
+                    var list = []
+                    S.node.find('.food-quote-row').each(function () {
+                        var row = $(this)
+                        var foodId = row.find('.food-id').val()
+                        var inputPrice = row.find('.inputPrice').val();
+                        var outputPrice = row.find('.outputPrice').val();
+                        var minOrderCount = row.find('.minOrderCount').val();
+                        var stock = row.find('.stock').val();
+                        var detail = {
+                            skuId: foodId,
+                            inputPrice: inputPrice,
+                            outputPrice: outputPrice,
+                            minOrderCount: minOrderCount,
+                            stock: stock
+                        }
+                        list.push(detail)
+                    })
+                    console.log(list)
+                    if (list.length == 0) {
+                        S.alert('请选择商品', 'warning')
+                        deferred.reject()
+                        return
+                    }
+                    var loadingDeferred = S.loading()
+                    var param = {};
+                    param.foodList = list
+                    param.storeUserId = [currentStoreUser.id]
+                    // S.post('/api/store-user-food', {json: JSON.stringify(param)}).done(function (rs) {
+                    //     if (rs) {
+                    //         S.toast('保存成功', 'success')
+                    //         S.close(true)
+                    //     } else {
+                    //         deferred.reject()
+                    //     }
+                    // }).fail(function () {
+                    //     deferred.reject()
+                    // }).always(function () {
+                    //     loadingDeferred.resolve()
+                    // })
 
 
-				}).fail(function () {
-					deferred.reject()
-				})
-				return deferred
-			}
-		},
-		{
-			name: "关闭",
-			style: "btn btn-default",
-			click: function () {
-				S.close();
-			}
-		}
-	]
+                }).fail(function () {
+                    deferred.reject()
+                })
+                return deferred
+            }
+        },
+        {
+            name: "关闭",
+            style: "btn btn-default",
+            click: function () {
+                S.close();
+            }
+        }
+    ]
 
-	function selectStoreUser() {
-		S.popupOpen('/storeUser/storeUserSelector.html', {multi: false}).done(function (storeUserList) {
-			if (storeUserList) {
-				currentStoreUser = storeUserList[0]
-				$storeUser.data(storeUserList[0])
-			}
-		})
-	}
+    function selectStoreUser() {
+        S.popupOpen('/storeUser/storeUserSelector.html', {multi: false}).done(function (storeUserList) {
+            if (storeUserList) {
+                currentStoreUser = storeUserList[0]
+                $storeUser.data(storeUserList[0])
+            }
+        })
+    }
 
-	selectStoreUser();
+    selectStoreUser();
 
-	function selectStoreFood() {
-		S.popupOpen('/store/store-selector.html', {
-			multi: false,
-			storeUserId: currentStoreUser.id
-		}).done(function (storeList) {
-			if (storeList) {
-				var store = storeList[0]
-				S.get('/api/food/online-store/' + store.id).done(function (foodList) {
-					$foodList.addRows(foodList)
-				})
-			} else {
-			}
-		}).fail(function () {
-		})
-	}
+    function selectStoreFood() {
+        S.popupOpen('/store/store-selector.html', {
+            multi: false,
+            storeUserId: currentStoreUser.id
+        }).done(function (storeList) {
+            if (storeList) {
+                var store = storeList[0]
+                S.get('/api/food/online-store/' + store.id).done(function (foodList) {
+                    $foodList.addRows(foodList)
+                })
+            } else {
+            }
+        }).fail(function () {
+        })
+    }
 
-	function selectFood() {
-		S.popupOpen('/food/foodSelector.html', {
-			multi: true,
-			quotable: true,
-			excludeStoreUserId: currentStoreUser.id
-		}).done(function (foodList) {
-			if (foodList) {
-				addFoodsToGrid(foodList)
-			}
-		})
-	}
+    function selectFood() {
+        S.popupOpen('/food/foodSkuSelector.html', {
+            multi: true,
+            quotable: true,
+            excludeStoreUserId: currentStoreUser.id
+        }).done(function (foodList) {
+            console.log(foodList)
+            if (foodList) {
+                addFoodsToGrid(foodList)
+            }
+        })
+    }
 
-	function addFoodsToGrid(foodList) {
-		var list = []
-		foodList.forEach(function (f) {
-			list.push({
-				foodPicture: f.picture,
-				foodId: f.id,
-				foodName: f.name,
-				foodSkuList: f.skuList,
-				quotePrice: f.price,
-				salePrice: f.salePrice || 0,
-				foodUnit: f.quoteUnit,
-				sale: f.sale || false,
-				foodPerIncrease: f.perIncrease
-			})
-		})
-		$foodList.addRows(list)
-	}
+    function addFoodsToGrid(foodList) {
+        var list = []
+        foodList.forEach(function (f) {
+            list.push({
+                foodPicture: f.picture,
+                id: f.id,
+                foodName: f.name,
+                minOrderCount: f.minOrderCount,
+                boxNum: f.boxNum,
+                boxPrice: f.boxPrice,
+                spec: f.spec,
+                stock: 100,
+                inputPrice: 0,
+                outputPrice: 0
+
+            })
+        })
+        $foodList.addRows(list)
+    }
 </script>
