--- a/admin/src/main/resources/static/storeUserFood/storeUserFoodList.html
+++ b/admin/src/main/resources/static/storeUserFood/storeUserFoodList.html
@@ -223,6 +223,9 @@
                 <a href="javascript:;" class="btn btn-default btn-sm" s-click="return addToStore()"><i
                         class="fa fa-plus"></i>
                     添加到门店</a>
+                <a href="javascript:;" class="btn btn-default btn-sm" s-click="return cg()"><i
+                        class="fa fa-plus"></i>
+                    采购</a>
                 <a href="javascript:;" class="btn btn-default btn-sm" s-click="return batchAdd()"><i
                         class="fa fa-plus"></i>
                     批量添加</a>
@@ -868,6 +871,13 @@
 
     function addToStore() {
         S.popupOpen('/storeUserFood/storeUserFoodAdd.html').done(function (rs) {
+            $page.node.val(1)
+            rs && $foodsGrid.refresh();
+        })
+    }
+
+    function cg() {
+        S.popupOpen('/test/caigou.html').done(function (rs) {
             $page.node.val(1)
             rs && $foodsGrid.refresh();
         })
