--- a/admin/src/main/resources/static/test/caigou.html
+++ b/admin/src/main/resources/static/test/caigou.html
@@ -1,4 +1,4 @@
-<meta title="新增门店商品" width="1000"/>
+<meta title="创建采购单" width="1000"/>
 <div class="p">
     <form id="form" s="valid,nda">
         <div class="p-b clearfix">
@@ -22,9 +22,7 @@
                     <th>图片</th>
                     <th>商品名</th>
                     <th class="text-right">进价</th>
-                    <th class="text-right">零售价</th>
-                    <th class="text-right">最小起购数量</th>
-                    <th class="text-right">库存</th>
+                    <th class="text-right">进货数量</th>
                     <th class="text-right">操作</th>
                 </tr>
                 <tbody s="loop" id="foodList">
@@ -36,7 +34,8 @@
                 <tr s-loop-role="row" class="food-quote-row" s="datac">
                     <td s="tpl">
                         <img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
-                        <input type="hidden" class="food-id" value="{%=this.id%}"/>
+                        <input type="hidden" class="sku-id" value="{%=this.skuId%}"/>
+                        <input type="hidden" class="food-id" value="{%=this.foodId%}"/>
                         <!--<input type="hidden" class="sale" value="{%=this.sale%}"/>-->
                     </td>
                     <td>
@@ -56,26 +55,9 @@
                     </td>
                     <td class="text-right" s="tpl">
                         <div class="input-group">
-                            <input type="number" class="form-control outputPrice" name="outputPrice"
+                            <input type="number" class="form-control num" name="num"
                                    style="width: 60px;" s-valid-error="require(),number()"
-                                   step="0.1"
-                                   value="{%=this.outputPrice.toFixed(1)%}"/>
-                            <span class="input-group-addon">元/{%=this.spec%}</span>
-                        </div>
-                    </td>
-                    <td class="text-right" s="tpl">
-                        <div class="input-group">
-                            <input type="number" class="form-control minOrderCount" name="minOrderCount"
-                                   style="width: 60px;" s-valid-error="require(),number()"
-                                   value="{%=this.minOrderCount%}"/>
-                            <!--<span class="input-group-addon">{%=this.minOrderCount%}</span>-->
-                        </div>
-                    </td>
-                    <td class="text-right" s="tpl">
-                        <div class="input-group">
-                            <input type="number" class="form-control stock" name="stock"
-                                   style="width: 60px;" s-valid-error="require(),number()"
-                                   value="{%=this.stock%}"/>
+                                   value="{%=this.num%}"/>
                             <!--<span class="input-group-addon">{%=this.stock%}</span>-->
                         </div>
                     </td>
@@ -103,20 +85,16 @@
                     S.node.find('.food-quote-row').each(function () {
                         var row = $(this)
                         var foodId = row.find('.food-id').val()
+                        var skuId = row.find('.sku-id').val()
                         var inputPriceNode = row.find('.inputPrice');
-                        var outputPriceNode = row.find('.outputPrice');
-                        var minOrderCountNode = row.find('.minOrderCount');
-                        var stockNode = row.find('.stock');
+                        var numNode = row.find('.num');
                         var inputPrice = inputPriceNode.val()
-                        var outputPrice = outputPriceNode.val()
-                        var minOrderCount = minOrderCountNode.val()
-                        var stock = stockNode.val()
+                        var num = numNode.val()
                         var detail = {
-                            skuId: foodId,
+                            foodId: foodId,
+                            skuId: skuId,
                             inputPrice: inputPrice,
-                            outputPrice: outputPrice,
-                            minOrderCount: minOrderCount,
-                            stock: stock
+                            num: num
                         }
                         list.push(detail)
                     })
@@ -130,9 +108,9 @@
                     var param = {};
                     param.foodList = list
                     param.storeUserId = [currentStoreUser.id]
-                    S.post('/api/store-user-food', {json: JSON.stringify(param)}).done(function (rs) {
+                    S.post('/api/test', {json: JSON.stringify(param)}).done(function (rs) {
                         if (rs) {
-                            S.toast('保存成功', 'success')
+                            S.toast('创建成功', 'success')
                             S.close(true)
                         } else {
                             deferred.reject()
@@ -170,24 +148,9 @@
 
     selectStoreUser();
 
-    function selectStoreFood() {
-        S.popupOpen('/store/store-selector.html', {
-            multi: false,
-            storeUserId: currentStoreUser.id
-        }).done(function (storeList) {
-            if (storeList) {
-                var store = storeList[0]
-                S.get('/api/food/online-store/' + store.id).done(function (foodList) {
-                    $foodList.addRows(foodList)
-                })
-            } else {
-            }
-        }).fail(function () {
-        })
-    }
 
     function selectFood() {
-        S.popupOpen('/food/foodSkuSelector.html', {
+        S.popupOpen('/test/foodSkuSelector.html', {
             multi: true,
             quotable: true,
             excludeStoreUserId: currentStoreUser.id
@@ -204,16 +167,12 @@
         foodList.forEach(function (f) {
             list.push({
                 foodPicture: f.picture,
-                id: f.id,
+                skuId: f.id,
+                foodId: f.foodId,
                 foodName: f.name,
-                minOrderCount: f.minOrderCount,
-                boxNum: f.boxNum,
-                boxPrice: f.boxPrice,
                 spec: f.spec,
-                stock: 100,
+                num: 0,
                 inputPrice: 0,
-                outputPrice: 0
-
             })
         })
         $foodList.addRows(list)
