--- a/admin/src/main/resources/static/warehouse/purchase-add.html
+++ b/admin/src/main/resources/static/warehouse/purchase-add.html
@@ -1,48 +1,96 @@
-<meta title="新建采购单" width="650px"/>
-<form role="form" id="storeUserForm" s="valid,form"
-      class="form-horizontal"
-      method="post"
-      style="padding: 20px;" action="/api/back/warehouse/createPurchaseOrder">
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">选择门店：</label>
-        <div s="tpl" id="storeUserList" style="display: inline-block">
-            <div style="display: inline-block" class="store-info"  id="storeName" value="{%=this.name%}"  name="storeName">
-                {%=this.name%} <a href="javascript:;" s-click="this.node.parent().remove()"
-                                  class="fa fa-times"></a>
-                <input type="hidden" name="storeId" data-name="{%=this.name%}" class="store-user-id"
-                       value="{%=this.id%}"/>
-                <input type="hidden" name="store" data-name="{%=this.name%}" class="store-user-id"
-                       value="{%=this.name%}"/>
+<meta title="新建采购单" width="1050px"/>
+<div class="p">
+    <form id="form" s="valid,nda">
+        <div class="p-b clearfix">
+            <div class="pull-left">
+                <div s-valid-role="item" id="storeUser" s="tpl" s-data="{}" s-valid-label="门店"
+                     s-click="selectStoreUser()" style="display: inline-block">
+                    <a href="javascript:;" class="h3">{%=this.name || '选择门店'%} <i class="fa fa-plus"></i></a>
+                    <input type="hidden" name="storeUserId" value="{%=this.id%}" s-valid-error="require()"/>
+                </div>
+            </div>
+            <div class="pull-right">
+                <input type="button" class="btn btn-success btn-xs" s-click="selectFood()" value="选择商品"/>
+                <!--<input type="button" class="btn btn-primary btn-xs" s-click="selectStoreFood()" value="添加门店商品"/>-->
             </div>
         </div>
-        <input type="button" class="btn btn-xs btn-outline btn-success" value="选择门店"
-               s-click="selectStoreUser()"/>
+    <div class="" id="foodQuoteSheetsGrid" s='check,datac,nda'
+         style="max-height: 500px; overflow: auto">
+        <table
+                class="table table-striped table-bordered form-inline table-hover">
+            <tr>
+                <th>图片</th>
+                <th>商品名</th>
+                <th class="text-right">进价</th>
+                <th class="text-right">进货数量</th>
+                <th class="text-right">操作</th>
+            </tr>
+            <tbody s="loop" id="foodList">
+            <tr s-loop-role="empty">
+                <td colspan="5" class="alert alert-warning">
+                    暂无商品
+                </td>
+            </tr>
+            <tr s-loop-role="row" class="food-quote-row" s="datac">
+                <td s="tpl">
+                    <img src="{%=this.foodPicture%}" style="max-width: 40px; max-height: 40px;"/>
+                    <input type="hidden" class="sku-id" value="{%=this.skuId%}"/>
+                    <input type="hidden" class="food-id" value="{%=this.foodId%}"/>
+                    <!--<input type="hidden" class="sale" value="{%=this.sale%}"/>-->
+                </td>
+                <td>
+                    <input type="text" readonly class="form-control food-name" name="foodName"/>
+                </td>
+                <td class="text-right" s="tpl">
+                    <div class="input-group">
+                        <input type="number" class="form-control inputPrice"
+                               name="inputPrice"
+                               data-food-unit="{%=this.spec%}"
+                               step="0.1"
+                               data-per-increase="{%=this.foodPerIncrease%}"
+                               style="width: 60px;" s-valid-error="require(),number()"
+                               value="{%=this.inputPrice.toFixed(1)%}"/>
+                        <span class="input-group-addon">元/{%=this.spec%}</span>
+                    </div>
+                </td>
+                <td class="text-right" s="tpl">
+                    <div class="input-group">
+                        <input type="number" class="form-control num" name="num"
+                               style="width: 60px;" s-valid-error="require(),number()"
+                               value="{%=this.num%}"/>
+                        <!--<span class="input-group-addon">{%=this.stock%}</span>-->
+                    </div>
+                </td>
+                <td class="text-right">
+                    <a href="javascript:;" class="btn btn-xs btn-danger" s-click="this.node.closest('tr').remove()">删除</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+
+            <label class="col-sm-2 control-label">商品种类数量：</label>
+            <div class="col-sm-10">
+                <input class="form-control"  rows="3" name="goodsTypeNum "/>
+           </div>
+
+            <label class="col-sm-2 control-label">采购总数量：</label>
+            <div class="col-sm-10">
+                <input class="form-control"  rows="3" name="procurementNum "/>
+            </div>
+
+
+
+            <label class="col-sm-2 control-label">采购总金额：</label>
+            <div class="col-sm-10">
+                <input class="form-control"  rows="3" name="procurementPrice"/>
+            </div>
     </div>
 
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">商品种类数量：</label>
-        <div class="col-sm-10">
-            <input autocomplete="off" type="text" name="goodsTypeNum" class="form-control" placeholder="请输入有多少种类的商品"
-            >
-        </div>
-    </div>
-
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">采购总数量：</label>
-        <div class="col-sm-10">
-            <input class="form-control" rows="3" name="procurementNum "/>
-        </div>
-    </div>
-
-    <div class="form-group" s-valid-role="item">
-        <label class="col-sm-2 control-label">采购总金额：</label>
-        <div class="col-sm-10">
-            <input class="form-control" rows="3" name="procurementPrice"  "/>
-        </div>
-    </div>
 
 
 </form>
+</div>
 <script type="text/javascript">
 
 
@@ -56,24 +104,65 @@
             }
         })
     }
+
+
+    var currentStoreUser = null;
+    var sale = false;
     S.meta.btns = [
         {
-            name: "保存",
+            name: "确定",
             style: "btn btn-primary",
             click: function () {
-                if (S.node.find('.store-user-id').val()) {
-                    return S.S("#storeUserForm").submit().done(function (rs) {
-                        S.alert("添加成功")
-                        S.close(true);
-                        S.S("#storeUserForm").refresh();
+                var deferred = $.Deferred()
+                $form.validate().done(function () {
+                    var list = []
+                    S.node.find('.food-quote-row').each(function () {
+                        var row = $(this)
+                        var foodId = row.find('.food-id').val()
+                        var skuId = row.find('.sku-id').val()
+                        var inputPriceNode = row.find('.inputPrice');
+                        var numNode = row.find('.num');
+                        var inputPrice = inputPriceNode.val()
 
-                    });
+                        var num = numNode.val()
+                        var detail = {
+                            foodId: foodId,
+                            skuId: skuId,
+                            inputPrice: inputPrice,
+                            num: num
+                        }
+                        list.push(detail)
+                    })
+                    console.log(list)
+                    if (list.length == 0) {
+                        S.alert('请选择商品', 'warning')
+                        deferred.reject()
+                        return
+                    }
+                    S.$("")
+                    var loadingDeferred = S.loading()
+                    var param = {};
+                    param.foodList = list
+                    param.store = [currentStoreUser.id]
 
-                }else {
-                    S.alert('请选择要绑定的店铺');
-                    return
-                }
+                    S.post('/api/test', {json: JSON.stringify(param)}).done(function (rs) {
+                        if (rs) {
+                            S.toast('创建成功', 'success')
+                            S.close(true)
+                        } else {
+                            deferred.reject()
+                        }
+                    }).fail(function () {
+                        deferred.reject()
+                    }).always(function () {
+                        loadingDeferred.resolve()
+                    })
 
+
+                }).fail(function () {
+                    deferred.reject()
+                })
+                return deferred
             }
         },
         {
@@ -84,4 +173,45 @@
             }
         }
     ]
+
+    function selectStoreUser() {
+        S.popupOpen('/storeUser/storeUserSelector.html', {multi: false}).done(function (storeUserList) {
+            if (storeUserList) {
+                currentStoreUser = storeUserList[0]
+                $storeUser.data(storeUserList[0])
+            }
+        })
+    }
+
+    selectStoreUser();
+
+
+    function selectFood() {
+        S.popupOpen('/test/foodSkuSelector.html', {
+            multi: true,
+            quotable: true,
+            excludeStoreUserId: currentStoreUser.id
+        }).done(function (foodList) {
+            console.log(foodList)
+            if (foodList) {
+                addFoodsToGrid(foodList)
+            }
+        })
+    }
+
+    function addFoodsToGrid(foodList) {
+        var list = []
+        foodList.forEach(function (f) {
+            list.push({
+                foodPicture: f.picture,
+                skuId: f.id,
+                foodId: f.foodId,
+                foodName: f.name,
+                spec: f.spec,
+                num: 0,
+                inputPrice: 0,
+            })
+        })
+        $foodList.addRows(list)
+    }
 </script>
